WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309049
[YARR] MultiPatternSIMD scalar loop should not fall into the body with index past end-of-input
https://bugs.webkit.org/show_bug.cgi?id=309049
Summary
[YARR] MultiPatternSIMD scalar loop should not fall into the body with index ...
Sosuke Suzuki
Reported
2026-03-03 00:32:50 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-03-03 00:34:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59782
EWS
Comment 2
2026-03-03 03:42:43 PST
Committed
308538@main
(9a6fa47cdbf3): <
https://commits.webkit.org/308538@main
> Reviewed commits have been landed. Closing PR #59782 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-03 03:43:11 PST
<
rdar://problem/171610679
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug